style: @layer base, components 정리 및 body에 bg 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,6 @@
 @tailwind utilities;
 
 @layer base {
-}
-
-@layer components {
   /* header */
   .h1 {
     font-weight: 700;
@@ -114,6 +111,16 @@
     letter-spacing: -0.6px;
   }
 
+  /* 경험 분해 - 카드 */
+  .experience {
+    @apply w-full border-[1px] border-purple-100 rounded-[24px] bg-white;
+  }
+  .experience-container {
+    @apply :not(:last-child)
+  }
+}
+
+@layer components {
   /* form에 해당하는 모든 컴포넌트: select, input */
   .form {
     @apply w-full p-4 b2 text-gray-300 bg-white border-[1px] rounded-2xl border-gray-300 hover:text-gray-500 hover:border-gray-500 focus:text-main focus:border-gray-600 disabled:text-gray-500 disabled:bg-gray-100 disabled:border-gray-200 focus-visible:outline-none;
@@ -125,5 +132,8 @@
 
   .form-error {
     @apply form border-error;
+  }
+  .flex-center {
+    @apply flex items-center justify-center;
   }
 }
