--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+  .layout {
+    @apply max-w-[1200px] mx-auto;
+  }
+  .layout-mt-40 {
+    @apply mt-10 layout;
+  }
 }
 
 @layer components {
