chore: green => cyan

--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -14,16 +14,16 @@
   @apply text-purple-500 bg-purple-50 border-[1px] border-solid border-purple-200;
 }
 
-.outlined-green {
-  @apply text-green-700 bg-green-50 border-[1px] border-solid border-green-300;
+.outlined-cyan {
+  @apply text-cyan-700 bg-cyan-50 border-[1px] border-solid border-cyan-300;
 }
 
 .filled-purple {
   @apply text-white bg-purple-500;
 }
 
-.filled-green {
-  @apply text-white bg-green-400;
+.filled-cyan {
+  @apply text-white bg-cyan-400;
 }
 
 .dark {
