--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -4,11 +4,11 @@
 
 // Variant
 .primary {
-  @apply bg-purple-50 text-purple-400;
+  @apply bg-primary-50 text-primary-400;
 }
 
 .secondary {
-  @apply bg-purple-500 text-white;
+  @apply bg-primary-500 text-white;
 }
 
 .tertiary {
