style&fix: 런타임 에러 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@
 
   /* 경험 분해 - 카드 */
   .experience {
-    @apply w-full border-[1px] border-purple-100 rounded-[24px] bg-white;
+    @apply w-full border-[1px] border-primary-100 rounded-[24px] bg-white;
   }
 }
 
