--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+  /* layout */
+  .layout {
+    @apply max-w-[1200px] mx-auto;
+  }
+  .layout-mt-40 {
+    @apply mt-10 layout;
+  }
+
   /* header */
   .h1 {
     font-weight: 700;
@@ -113,7 +121,7 @@
 
   /* 경험 분해 - 카드 */
   .experience {
-    @apply w-full border-[1px] border-purple-100 rounded-[24px] bg-white;
+    @apply w-full border-[1px] border-primary-100 rounded-[24px] bg-white;
   }
 }
 
