refactor: 툴팁 컴포넌트 분할

--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -1,59 +1,3 @@
-// Base
-
-.root {
-  @apply relative flex justify-center items-center py-[12px] px-[16px] rounded-[8px] font-normal text-[16px] leading-[27px] drop-shadow-tooltip;
-}
-
-// Tail
-
-.root .tail {
-  @apply absolute;
-}
-
-.light path {
-  @apply fill-white;
-}
-
-// Type
-
-.strong {
-  @apply bg-gray-950 text-white;
-}
-
-.light {
-  @apply bg-white text-dark;
-}
-
-// Position
-
-.center-top .tail {
-  @apply left-[50%] bottom-[-9px] translate-x-[-50%];
-}
-
-.center-bottom .tail {
-  @apply left-[50%] top-[-9px] translate-x-[-50%];
-}
-
-.left-top .tail {
-  @apply left-[8px] bottom-[-9px];
-}
-
-.left-bottom .tail {
-  @apply left-[8px] top-[-9px];
-}
-
-.right-top .tail {
-  @apply right-[8px] bottom-[-9px];
-}
-
-.right-bottom .tail {
-  @apply right-[8px] top-[-9px];
-}
-
-.side-right-center .tail {
-  @apply left-[-9px] top-[50%] translate-y-[-50%];
-}
-
-.side-left-center .tail {
-  @apply right-[-9px] top-[50%] translate-y-[-50%];
+.root > .children {
+  @apply relative;
 }
