--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,12 @@
     line-height: 28px;
     letter-spacing: -0.6px;
   }
+  .subhead4 {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: -0.6px;
+  }
 
   /* body */
   .b1 {
