chore: Chip, Badge variant color 명 변경

--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -18,7 +18,7 @@
   @apply text-main;
 
   div {
-    @apply text-white bg-gray-900;
+    @apply text-white bg-gray-900 border-none;
   }
 }
 
@@ -46,7 +46,7 @@
   @apply text-main;
 
   div {
-    @apply text-white bg-gray-900;
+    @apply text-white bg-gray-900 border-none;
   }
 }
 
