--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -3,43 +3,43 @@
 }
 
 // Variant
-.primary-50 {
+.primary50 {
   @apply bg-primary-50 text-primary-400;
 }
 
-.primary-500 {
+.primary500 {
   @apply bg-primary-500 text-white;
 }
 
-.primary-outline {
+.primary50-outline {
   @apply bg-primary-50 text-primary-500 border border-primary-300;
 }
 
-.secondary {
+.secondary500 {
   @apply bg-secondary-500 text-white;
 }
 
-.secondary-outline {
-  @apply bg-secondary-50 text-secondary-700 border border-secondary-300;
+.secondary50-outline {
+  @apply bg-secondary-50 text-secondary-800 border border-secondary-200;
 }
 
-.tertiary {
-  @apply bg-gray-100 text-gray-700;
+.gray100 {
+  @apply bg-gray-100 text-main;
 }
 
-.gray-800 {
+.gray800 {
   @apply bg-gray-800 text-white;
 }
 
 // Size
-.s1 {
+.S {
   @apply px-2 py-1 text-xs;
 }
 
-.s2 {
+.M {
   @apply px-3 py-1.5 text-sm leading-[22px];
 }
 
-.s3 {
+.L {
   @apply px-4 py-2 text-xl;
 }
