--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -1,5 +1,5 @@
 .root {
-  @apply text-center rounded-lg font-medium h-max;
+  @apply text-center rounded-lg font-medium h-max w-fit;
 }
 
 // Variant
