style: GNB 요소 flex-shrink 0 적용

--- a/src/components/Button/GoogleLoginButton.module.scss
+++ b/src/components/Button/GoogleLoginButton.module.scss
@@ -1,7 +1,7 @@
 .root {
-  @apply flex justify-center items-center px-[16px] py-[7.5px] bg-white border-[1px] border-solid border-primary-300 rounded-[26px] gap-[4px];
+  @apply flex justify-center items-center px-[16px] py-[7.5px] bg-white border-[1px] border-solid border-primary-300 rounded-[26px] gap-[4px]  shrink-0;
 
   span {
-    @apply font-bold text-[16px] leading-[28px] text-primary-500;
+    @apply font-bold text-[16px] leading-[28px] text-primary-500 shrink-0;
   }
 }
