feat: 회원가입 모달의 지금 시작하기 영역 구현

--- a/src/features/auth/components/AuthModal/CategoryCard/CategoryCard.module.scss
+++ b/src/features/auth/components/AuthModal/CategoryCard/CategoryCard.module.scss
@@ -2,7 +2,7 @@
   @apply flex items-center w-[224px] p-[12px] gap-[4px] rounded-[8px] bg-gray-200 cursor-pointer text-light;
 
   .icon-wrapper {
-    @apply flex-center p-[4px];
+    @apply flex justify-center items-center p-[4px];
   }
 
   // Hover
