--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,4 +137,8 @@
   .flex-center {
     @apply flex items-center justify-center;
   }
+  /* resume에서 사용하는 section 컴포넌트: ResumeForm, ExperienceCardList */
+  .resume-section {
+    @apply flex flex-col w-[700px] border-[1px] rounded-3xl border-primary-100 shadow-toast bg-white;
+  }
 }
