--- a/src/components/Tooltip/TooltipContent.module.scss
+++ b/src/components/Tooltip/TooltipContent.module.scss
@@ -1,7 +1,7 @@
 // Base
 
 .common {
-  @apply flex justify-center items-center py-[12px] px-[16px] rounded-[8px] b1;
+  @apply flex justify-center items-center py-[12px] px-[16px] rounded-[8px];
 }
 
 .root {
@@ -9,7 +9,7 @@
 }
 
 .root-relative {
-  @apply relative flex justify-center items-center py-[12px] px-[16px] b1 rounded-[16px];
+  @apply relative flex justify-center items-center py-[12px] px-[16px] rounded-[16px];
 }
 
 // Type
