fix&style: Badge 컴포넌트 수정 후 제대로 적용

--- a/src/feature/analyze/layout/StepMenuItem.module.scss
+++ b/src/feature/analyze/layout/StepMenuItem.module.scss
@@ -1,5 +1,5 @@
 .root {
-  @apply flex justify-between px-[16px] py-[10.5px] rounded-[8px] border-[1px] w-[100%] cursor-pointer;
+  @apply flex items-center justify-between px-[16px] py-[10.5px] rounded-[8px] border-[1px] w-[100%] cursor-pointer;
 }
 
 .미작성 {
