feat: GNB 마이페이지 연결

--- a/src/components/GlobalNavigationBar/GlobalNavigationBar.module.scss
+++ b/src/components/GlobalNavigationBar/GlobalNavigationBar.module.scss
@@ -1,5 +1,5 @@
 .root {
-  @apply fixed flex items-center justify-between bg-dark w-full h-[56px] px-[120px] z-10;
+  @apply fixed flex items-center justify-between bg-dark w-full h-[56px] px-[120px] z-10 s1;
 }
 
 .link {
