feat: 자기소개서 - 경험카드 리스트 api 연결 (#124)
* feat: 경험카드 리스트에서 현재 선택한 키워드를 store로 관리

* refactor: ChipListNav props 추가 및 스타일 수정

- chipSize 추가
- changeItem 타입 변경
- flex-shrink: 0

* feat: MyExperienceCard 키워드 api 연결

* feat: 경험카드 리스트에서 현재 선택한 경험카드 id를 store로 관리

* refactor: getExperiencePeriod 매개변수 타입 변경

* feat: 경험카드 리스트 조회 api 연결

* feat: 경험카드 단일 조회 api 및 reactQuery 훅 구현

* feat: 경험카드 단일 조회 api 적용

* refactor: 경험카드 props 타입 수정

* fix: 머지하면서 반영 안된 부분 수정

* fix: 변경된 ChipNavList props에 따라 수정

* feat: 경험카드 키워드 조회 api에 쿼리스트링 추가

- 쿼리스트링에 작성완료된 경험카드의 키워드만 조회할 수 있는 isCompleted 추가

* feat: 작성완료된 경험카드만 조회하도록 필터링

* fix: api 응답 변경에 따라 전체 키워드 계산하는 로직 제거

- 프론트에서 count하던 전체 개수 -> api 응답으로 변경

--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -11,6 +11,10 @@
 }
 
 .primary50-outline {
+  @apply text-primary-500 bg-primary-100 border-[1px] border-solid border-primary-200 m-[-1px];
+}
+
+.primary200-outline {
   @apply text-primary-500 bg-primary-50 border-[1px] border-solid border-primary-200 m-[-1px];
 }
 
