--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,7 +135,7 @@
 @layer components {
   /* form에 해당하는 모든 컴포넌트: select, input */
   .form {
-    @apply w-full p-4 b2 text-gray-300 bg-white border-[1px] rounded-2xl border-gray-300 hover:text-gray-500 hover:border-gray-500 focus:text-main focus:border-primary-500 disabled:text-gray-500 disabled:bg-gray-100 disabled:border-gray-200 focus-visible:outline-none read-only:cursor-not-allowed read-only:text-main read-only:bg-gray-50 read-only:border-none;
+    @apply w-full p-4 b2 text-main bg-white border-[1px] rounded-2xl border-gray-300 hover:text-main hover:border-gray-500 focus:text-main focus:border-primary-500 active:text-main disabled:text-gray-500 disabled:bg-gray-100 disabled:border-gray-200 focus-visible:outline-none read-only:cursor-not-allowed read-only:text-main read-only:bg-gray-50 read-only:border-none;
   }
 
   .form-error {
